bk_ida/gccida/g2/protect_from_queue
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:817:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:817:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:819:4: error: expected ';' after expression
rtx v6; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:819:5: error: use of undeclared identifier 'v6'
rtx v6; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:820:4: error: expected ';' after expression
rtx v7; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:820:5: error: use of undeclared identifier 'v7'
rtx v7; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:825:4: error: expected ';' after expression
rtx v12; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:825:5: error: use of undeclared identifier 'v12'
rtx v12; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:826:4: error: expected ';' after expression
rtx v13; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:826:5: error: use of undeclared identifier 'v13'
rtx v13; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:827:4: error: expected ';' after expression
rtx v14; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:827:5: error: use of undeclared identifier 'v14'
rtx v14; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:828:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:828:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:839:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( x[1] ) 
^    ~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:844:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_reg_rtx( ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:846:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:856:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/expr.c:859:1: error: use of undeclared identifier 'v6'
v6 = protect_from_queue( x->fld[0].rtx, 0); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/protect_from_queue/src/obj/expr.o] Error 1
